--- a/views/muro.pug
+++ b/views/muro.pug
@@ -161,6 +161,7 @@ block content
             span.icon &starf;
             span.icon &starf;
             span.icon &starf;
+         p.card-text=`Promedio: ${post.dataValues.promedio}`
           
     
   
