algunos pasos a controllers

--- a/views/perfil.pug
+++ b/views/perfil.pug
@@ -1,11 +1,12 @@
 extends layout
-
+block scripts 
+ script(src="/javascripts/murojs.js" defer)
 block content
   a(href="/logout") Logout #{nick}
   br
   a(href="/muro") Volver 
   h1= title
-  form(action="/muro/perfil", method="post")
+  form(action="/user/perfil", method="post")
    input(type="hidden", name="id",value=usuario.id) 
    label(for="nick") Nick: 
    input(type="text", name="nick", value=usuario.nick, readonly, disabled)
