--- a/views/muro.pug
+++ b/views/muro.pug
@@ -5,7 +5,7 @@ block scripts
 block content
   a(href="/logout") Logout #{nick}
   br
-  a(href="muro/perfil") #{nick}: Datos de perfil
+  a(href="user/perfil") #{nick}: Datos de perfil
   br
   a(href="/") Volver 
   h1= title
@@ -109,15 +109,10 @@ block content
    .row
     each post in posts    
       .col-md-4
-       .card(style='width: 18rem;')
+       .card(style='width: 14rem;')
         img.card-img-top(src=post.Img.url)
         .card-body
          h5.card-title=post.titulo
-         p.card-text 
-          |Dueño: 
-         p.card-text= `Nick: ${post.User.nick}` 
-         p.card-text= `Mail: ${post.User.mail}` 
-         p.card-text= `Categoria: ${post.categoria}`
          p.card-text
           |Tags:
          p.card-text= post.etiquetas
@@ -131,9 +126,7 @@ block content
          .comentarios
           each comentario in post.Comentarios 
            p=comentario.descripcion
-         a.btn.mr-2(href='/compraventa')
-          i.fas.fa-link
-          |  Compra/venta  
+         a(href=`muro/detalles/${post.id}`)  Info... 
          br
          form.rating
           label
