--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,4 @@ block content
   a(href="/muro") Ingreso con usuario
   br
   br
-  a(href="http://") Ingreso publico 
+  a(href="/public") Ingreso publico 
