--- a/views/publicMuro.pug
+++ b/views/publicMuro.pug
@@ -2,7 +2,20 @@ extends layout
 block scripts 
  script(src="/javascripts/murojs.js" defer)
 block content
-  a(href="/logout") Logout #{nick}
-  br
   a(href="/") Volver 
   h1= title
+  h2 Muro publico
+  .container.mx-auto.mt-4
+   .row
+    each post in posts    
+     .col-md-4
+      .card(style='width: 13rem;background:url("../images/fotaza.png") no-repeat;opacity: 1;')
+       img.card-img-top(src=post.Img.url,style=" opacity: 0.7;width: 207px")
+       .card-body
+        h5.card-title=post.titulo
+        p.card-text
+         |Tags:
+        p.card-text= post.etiquetas
+        a(href=`muro/detalles/${post.id}`)  Info... 
+        br
+        p.card-text=`Promedio: ${post.dataValues.promedio}`
