--- a/views/muro.pug
+++ b/views/muro.pug
@@ -104,12 +104,25 @@ block content
    |
    |
    input(type="submit", value="Buscar")
+  h2 Destacados 
+  .container.mx-auto.mt
+   .row
+    each postDes in postsDesta    
+      .col-md-4
+       div(class="p-3 mb-2 bg-danger text-white",style='width: 15rem;')
+        img.card-img-top(src=postDes.Img.url,style='width: 207px;')
+        .card-body
+         h5.card-title=postDes.titulo
+         p.card-text  
+          |Tags:
+         p.card-text= postDes.etiquetas
+         a(href=`muro/detalles/${postDes.id}`)  Info...
   h2 Muro
   .container.mx-auto.mt-4
    .row
     each post in posts    
       .col-md-4
-       .card(style='width: 13rem;')
+       div(class="p-3 mb-2 bg-success text-white",style='width: 15rem;')
         img.card-img-top(src=post.Img.url,style='width: 207px;')
         .card-body
          h5.card-title=post.titulo
