--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,3 +72,22 @@ a {
   color: #000;
   text-shadow: 0 0 5px #09f;
 }
+.subtitulo {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+.titulo {
+  font-size: calc(1.525rem + 3.3vw);
+  font-weight: 300;
+  line-height: 1.2;
+  text-align:center;
+}
+.rounded-5 {
+  border-radius: 0.5rem!important;
+}
+.buscador{
+  font-size: calc(1.375rem + 1.5vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
