--- a/views/detalles.pug
+++ b/views/detalles.pug
@@ -2,22 +2,22 @@ extends layout
 block scripts 
  script(src="/javascripts/murojs.js" defer)
 block content
-  a(href="/logout") Logout #{nick}
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
+   div(class="container-fluid")
+    a(href="/muro",class="link-light") Volver 
+    a(href="user/perfil",class="link-light") #{nick}: Datos de perfil
+    a(href="/logout",class="link-light") Logout #{nick}
+  h1.titulo= title
   br
-  a(href="/muro") Volver 
-  h1= title
-  .container.mx-auto.mt-4
-   .row  
-    .col-md-4
-     .card(style='width: 18rem;')
-      img.card-img-top(src=post.Img.url)
-      .card-body
-       h5.card-title=post.titulo
-       p.card-text
-        |Tags:
-       p.card-text=post.etiquetas
-       p.card-text 
-          |Dueño: 
-       p.card-text= `Nick: ${post.User.nick}` 
-       p.card-text= `Mail: ${post.User.mail}` 
-       p.card-text= `Categoria: ${post.categoria}`
+  div(class="w-100 p-4 d-flex justify-content-center pb-4")
+   div(class="p-3 mb-2 bg-secondary text-white",style='width: 30rem;border-radius:20px;')
+    img.card-img-top(src=post.Img.url)
+    .card-body
+     h5.card-title=post.titulo
+     p.card-text
+      |Tags:      p.card-text=post.etiquetas
+     p.card-text 
+      |Dueño: 
+     p.card-text= `Nick: ${post.User.nick}` 
+     p.card-text= `Mail: ${post.User.mail}` 
+     p.card-text= `Categoria: ${post.categoria}`
