--- a/views/perfil.pug
+++ b/views/perfil.pug
@@ -2,9 +2,10 @@ extends layout
 block scripts 
  script(src="/javascripts/murojs.js" defer)
 block content
-  a(href="/logout",class="link-danger") Logout #{nick}
-  br
-  a(href="/muro") Volver 
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
+   div(class="container-fluid")
+    a(href="/muro",class="link-light") Volver 
+    a(href="/logout",class="link-light") Logout #{nick}
   h1.subtitulo= title
   div(class="bg-white border rounded-5")
    div(class="w-100 p-4 d-flex justify-content-center pb-4")
