--- a/views/publicMuro.pug
+++ b/views/publicMuro.pug
@@ -2,28 +2,28 @@ extends layout
 block scripts 
  script(src="/javascripts/murojs.js" defer)
 block content
-  a(href="/") Volver 
-  h1= title
-  h5 Buscador 
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
+   div(class="container-fluid")
+    a(href="/",class="link-light") Volver 
+  h1.titulo= title
+  h5.buscador Buscador 
   form(action="/public/buscar", method="post")
-   label(for="palabraclave") Palabra clave: 
-   |
-   |
-   input(type="text", name="palabraclave", required)
-   |
-   |
-   input(type="submit", value="Buscar")
-  h2 Muro publico
+   div(class="form-floating mb-3")
+    input(type="text", name="palabraclave",class="form-control", required)
+    label(for="palabraclave") Palabra clave: 
+    br
+    input(type="submit",class="btn btn-primary", value="Buscar")
+  h2.subtitulo Muro publico
   .container.mx-auto.mt-4
    .row
     each post in posts    
-     .col-md-4
-      .card(style='width: 13rem;background:url("../images/fotaza.png") no-repeat;opacity: 1;')
-       img.card-img-top(src=post.Img.url,style=" opacity: 0.7;width: 207px")
-       .card-body
-        h5.card-title=post.titulo
-        p.card-text
-         |Tags:
-        p.card-text= post.etiquetas
-        br
-        p.card-text=`Promedio: ${post.dataValues.promedio}`
+      .col-md-4
+       div(class="p-3 mb-2 bg-secondary text-white",style='width: 15rem;border-radius:20px;')
+        div(style='width: 13rem;background:url("../images/fotaza.png") no-repeat;opacity: 1;')
+         img.card-img-top(src=post.Img.url,style='width: 207px;opacity: 0.7;width: 207px')
+        .card-body
+         h5.card-title=post.titulo
+         p.card-text
+          |Tags:
+         p(class="text-break")= post.etiquetas
+         p.card-text=`Promedio: ${post.dataValues.promedio}`
