--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,14 @@
 extends layout
 
 block content
+  nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
+   div(class="container-fluid")
+    p 
+    if(nick)
+     a(href="user/perfil",class="link-light") #{nick}: Datos de perfil
+    else 
+     p 
+    a(href="/logout",class="link-light") Logout #{nick}
   h1.titulo= title
   div(class="bg-white border rounded-5")
    div(class="w-100 p-4 d-flex justify-content-center pb-4")
