--- a/views/publicMuro.pug
+++ b/views/publicMuro.pug
@@ -5,6 +5,11 @@ block content
   nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
    div(class="container-fluid")
     a(href="/",class="link-light") Volver 
+    if(nick)
+     a(href="user/perfil",class="link-light") #{nick}: Datos de perfil
+    else 
+     p 
+    a(href="/logout",class="link-light") Logout #{nick}
   h1.titulo= title
   h5.buscador Buscador 
   form(action="/public/buscar", method="post")
