--- a/views/muro.pug
+++ b/views/muro.pug
@@ -6,6 +6,7 @@ block content
   nav(class="navbar navbar-expand-md navbar-dark fixed-top bg-dark") 
    div(class="container-fluid")
     a(href="/",class="link-light") Volver 
+    a(href="user/misimagenes",class="link-light") Mis imagenes
     a(href="user/perfil",class="link-light") #{nick}: Datos de perfil
     a(href="/logout",class="link-light") Logout #{nick}
   h1.titulo= title
