--- a/views/muro.pug
+++ b/views/muro.pug
@@ -75,11 +75,11 @@ block content
         label(for="Etiqueta1") Etiqueta#1
       div(class="col-md")
        div(class="form-floating")  
-        input#etiqueta2(type="text", name="Etiqueta2",class="form-control")
+        input#etiqueta2(type="text", name="Etiqueta2",class="form-control",disabled="disabled")
         label(for="Etiqueta2") Etiqueta#2
       div(class="col-md")
        div(class="form-floating")  
-        input#etiqueta3(type="text", name="Etiqueta3",class="form-control")
+        input#etiqueta3(type="text", name="Etiqueta3",class="form-control",disabled="disabled")
         label(for="Etiqueta3") Etiqueta#3
      br
      br 
